# CLRInstrumentationEngine

./: .gitignore  Config.xml  InstrumentationEngine.sln  NuGet.config
src/: CMakeLists.txt  build.sh
src/Common.Lib/: CMakeLists.txt  Common.Lib.vcxproj  XmlDocWrapper.cpp  XmlDocWrapper.h  XmlNode.cpp  XmlNode.h  iids.cpp  systemstring.cpp  systemstring.h
src/Common.LibTests/: CMakeLists.txt  CommonLibTests.vcxproj  StringConversionTests.cpp  XmlDocumentTests.cpp  pch.h
src/Dependencies/: NativeDependencies.csproj  NativeTestDependencies.csproj
src/InstrumentationEngine/: AssemblyInjector.cpp  CorHeaders.h  ExceptionClause.cpp  Instruction.cpp  InstructionGraph.cpp  MethodInfo.cpp  MethodInfo.h  ModuleInfo.cpp  ProfilerManager.cpp  ProfilerManager.h  ProfilerManagerForInstrumentationMethod.cpp
src/InstrumentationEngine.Lib/: CMakeLists.txt  ConfigurationLoader.cpp  ConfigurationLoader.h  InstrumentationEngine.Lib.vcxproj  InstrumentationMethod.cpp  InstrumentationMethod.h  XmlDocWrapper.cpp  XmlDocWrapper.h  XmlNode.cpp  XmlNode.h  stdafx.h
src/Tests/CommonLibTests/: CMakeLists.txt  CommonLibTests.vcxproj  StringConversionTests.cpp  XmlDocumentTests.cpp  pch.h
src/Tests/InstrumentationEngineLibTests/: CMakeLists.txt  ConfigurationLoaderTests.cpp  InstrumentationEngineLibTests.vcxproj  pch.cpp  pch.h
src/unix/inc/mincom/: hresults.h  mincom.h
tests/InstrumentationEngine.Lib.Tests/: ConfigurationLoaderTests.cpp  InstrumentationMethodTests.cpp  LoggingTests.cpp
